change the deprecated URL(String) for an URI